force-app/main/default/objects/RH_Excel_Field_Config__mdt/RH_Excel_Field_Config__mdt.object-meta.xml
<CustomObject>
    <label>Excel Field Config</label>
    <pluralLabel>Excel Fields Config</pluralLabel>
</CustomObject>