force-app/main/default/objects/RH_Excel_Field_Config__mdt/fields/headerStyle__c.field-meta.xml
<CustomField>
    <fullName>headerStyle__c</fullName>
    <description>style configuration key from RH_Excel_Style__mdt table</description>
    <inlineHelpText>style configuration key from RH_Excel_Style__mdt table</inlineHelpText>
    <label>headerStyle</label>
    <referenceTo>RH_Excel_Style__mdt</referenceTo>
    <relationshipLabel>Excel Fields Config</relationshipLabel>
    <relationshipName>Excel_Fields_Config</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>