force-app/main/default/objects/RH_Excel_Field_Config__mdt/fields/ImplementationClass__c.field-meta.xml
<CustomField>
    <fullName>ImplementationClass__c</fullName>
    <defaultValue>&apos;RH_Export_Controller&apos;</defaultValue>
    <label>Implementation Class</label>
    <length>100</length>
    <type>Text</type>
</CustomField>