force-app/main/default/objects/RH_Excel_Field_Config__mdt/fields/Label__c.field-meta.xml
<CustomField>
    <fullName>Label__c</fullName>
    <label>Label</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>