force-app/main/default/objects/RH_Excel_Field_Config__mdt/fields/logicType__c.field-meta.xml
<CustomField>
    <fullName>logicType__c</fullName>
    <defaultValue>&apos;STD&apos;</defaultValue>
    <inlineHelpText>the logic based on the field and the implementation class...
Standard : the filed name and the value will by get in a standard way by a query
Custom : the field real name (s) to be included and the value will be get by doing some calculations</inlineHelpText>
    <label>logic Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>STD</fullName>
                <default>true</default>
                <label>STD</label>
            </value>
            <value>
                <fullName>CUSTOM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>