force-app/main/default/objects/RH_Excel_Field_Config__mdt/fields/Object__c.field-meta.xml
<CustomField>
    <fullName>Object__c</fullName>
    <inlineHelpText>list of object on which this column can be visible</inlineHelpText>
    <label>Object(s)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>