force-app/main/default/objects/RH_Excel_Field_Config__mdt/fields/rowStyle__c.field-meta.xml
<CustomField>
    <fullName>rowStyle__c</fullName>
    <description>style configuration key from RH_Excel_Style__mdt table</description>
    <inlineHelpText>style configuration key from RH_Excel_Style__mdt table</inlineHelpText>
    <label>row Style</label>
    <referenceTo>RH_Excel_Style__mdt</referenceTo>
    <relationshipLabel>Excel Fields Config (row Style)</relationshipLabel>
    <relationshipName>Excel_Fields_Config1</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>