force-app/main/default/objects/RH_Excel_Field_Config__mdt/fields/type__c.field-meta.xml
<CustomField>
    <fullName>type__c</fullName>
    <defaultValue>&apos;String&apos;</defaultValue>
    <label>type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>String</fullName>
                <default>true</default>
                <label>String</label>
            </value>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>email</fullName>
            </value>
            <value>
                <fullName>number</fullName>
            </value>
            <value>
                <fullName>date</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>