force-app/main/default/objects/RH_Excel_Field_Config__mdt/fields/Visibility__c.field-meta.xml
<CustomField>
    <fullName>Visibility__c</fullName>
    <label>Visibility</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>All</fullName>
                <default>true</default>
                <label>All</label>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>CEO</fullName>
            </value>
            <value>
                <fullName>Ressource Manager</fullName>
            </value>
            <value>
                <fullName>Team Leader</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>